--- a/style.css
+++ b/style.css
@@ -1,20 +1,88 @@
+* {
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+body {
+    background-color: #191919;
+}
+
 .wrapper {
     text-align: center;
 }
 
-img {
-    width: 100px;
-    height: 100px;
-    transition: 0.2s;
+h1 {
+    color : #715A5A;
 }
 
-img:active {
-    transform: scale(0.9);
+#button {
+    width: 75%;
+    height: 150px;
+    border-radius: 8px;
+    border: 0;
+    transition: 0.4s;
+    background-color: #44444E;
+    font-size: 24px;
+    color: #ddd;
+}
+
+#backspace, #restart, #button:hover {
     cursor: pointer;
 }
 
+#button:hover {
+    transform:translateY(-4px);
+    background-color: #53535e;
+}
+* {
+    box-sizing: border-box;
+}
+
+.action {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    font-size: 24px;
+}
+
+.container {
+    width: 75%;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
 .result {
-    background-color: red;
+    margin: 16px 0;
+}
+
+.input,
+.output {
+    width: 100%;
     padding: 8px;
-    font-size: 32px;
+    background-color: #D3DAD9;
+}
+
+.output {
+    margin-top: 12px;
+}
+
+.bottom-btn {
+    display: flex;
+    gap: 10px;
+}
+
+
+#backspace {
+    margin-left: 8px ;
+    background-color: #53535e;
+    color: #fff;
+    border-radius: 4px;
+} 
+
+#restart {
+    background: url(trash-can.svg);
+    background-size: 30px 40px;
+    width: 30px;
+    height: 40px;
+    border : 0;
 }
