--- a/style.css
+++ b/style.css
@@ -12,7 +12,10 @@ body {
 
 h1 {
     color : #715A5A;
+    font-size: 48px;
 }
+
+
 
 #button {
     width: 75%;
@@ -41,7 +44,15 @@ h1 {
     display: flex;
     justify-content: center;
     padding: 20px;
+}
+
+.result {
     font-size: 24px;
+}
+
+.action.warning {
+    display: inline-block;
+    font-size: 12px;
 }
 
 .container {
